@@ -1,9 +1,10 @@
 New in version 0.6.1:
 	* Enhanced groups
-		* Groups will now gather resources and engage in combat with other groups
+		* Groups will now gather resources and engage in combat with other groups.
 	* Mouse look
 		* The mouse can now be used to select items in look mode.
-	* ALife now take more factors into consideration when deciding if they are safe.
+	* ALife take more factors into consideration when deciding if they are safe
+	* Worlds are initially seeded with one group of a random motive.
 
 New in version 0.6:
 	* ALife now use dijkstra maps to better calculate distance to targets
